fix: Don't crash on new config based on `ConfigDict`
Issue-6: https://github.com/mkdocstrings/griffe-pydantic/issues/6

--- a/src/griffe_pydantic/templates/material/_base/pydantic_model.html.jinja
+++ b/src/griffe_pydantic/templates/material/_base/pydantic_model.html.jinja
@@ -17,7 +17,7 @@
       <p>Config:</p>
       <ul>
         {% for name, value in class.extra.griffe_pydantic.config.items() %}
-          <li><code>{{ name }}</code>: {{ value|highlight(language="python", inline=True) }}</li>
+          <li><code>{{ name }}</code>: {{ value|string|highlight(language="python", inline=True) }}</li>
         {% endfor %}
       </ul>
     {% endif %}
