feat: Also support `pydantic.model_validator`
Issue-4: https://github.com/mkdocstrings/griffe-pydantic/issues/4

--- a/src/griffe_pydantic/templates/material/_base/pydantic_model.html.jinja
+++ b/src/griffe_pydantic/templates/material/_base/pydantic_model.html.jinja
@@ -48,11 +48,14 @@
         <ul>
           {% for name, validator in validators.items() %}
             <li>
-              <code><autoref optional hover identifier="{{ validator.path }}">{{ name }}</autoref></code> &rarr;
-              {% for target in validator.extra.griffe_pydantic.targets %}
-                <code><autoref optional hover identifier="{{ target.path }}">{{ target.name }}</autoref></code>
-                {%- if not loop.last %}, {% endif %}
-              {% endfor %}
+              <code><autoref optional hover identifier="{{ validator.path }}">{{ name }}</autoref></code>
+              {% if validator.extra.griffe_pydantic.targets %}
+                &rarr;
+                {% for target in validator.extra.griffe_pydantic.targets %}
+                  <code><autoref optional hover identifier="{{ target.path }}">{{ target.name }}</autoref></code>
+                  {%- if not loop.last %}, {% endif %}
+                {% endfor %}
+              {% endif %}
             </li>
           {% endfor %}
         </ul>
